; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_mesh.c_wpas_mesh_get_ifname.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_mesh.c_wpas_mesh_get_ifname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_supplicant = type { i8*, i32 }

@.str = private unnamed_addr constant [11 x i8] c"mesh-%s-%d\00", align 1
@IFNAMSIZ = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [8 x i8] c"mesh-%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpa_supplicant*, i8*, i64)* @wpas_mesh_get_ifname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wpas_mesh_get_ifname(%struct.wpa_supplicant* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wpa_supplicant*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.wpa_supplicant* %0, %struct.wpa_supplicant** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %5, align 8
  %11 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %5, align 8
  %17 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 (i8*, i64, i8*, i8*, ...) @os_snprintf(i8* %13, i64 %14, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %15, i32 %18)
  store i32 %19, i32* %9, align 4
  %20 = load i64, i64* %7, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @os_snprintf_error(i64 %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %36, label %24

24:                                               ; preds = %3
  %25 = load i8*, i8** %6, align 8
  %26 = call i64 @os_strlen(i8* %25)
  %27 = load i64, i64* @IFNAMSIZ, align 8
  %28 = icmp sge i64 %26, %27
  br i1 %28, label %29, label %51

29:                                               ; preds = %24
  %30 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %5, align 8
  %31 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %30, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  %33 = call i64 @os_strlen(i8* %32)
  %34 = load i64, i64* @IFNAMSIZ, align 8
  %35 = icmp slt i64 %33, %34
  br i1 %35, label %36, label %51

36:                                               ; preds = %29, %3
  %37 = load i8*, i8** %6, align 8
  %38 = load i64, i64* %7, align 8
  %39 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %5, align 8
  %40 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = sext i32 %41 to i64
  %43 = inttoptr i64 %42 to i8*
  %44 = call i32 (i8*, i64, i8*, i8*, ...) @os_snprintf(i8* %37, i64 %38, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %43)
  store i32 %44, i32* %9, align 4
  %45 = load i64, i64* %7, align 8
  %46 = load i32, i32* %9, align 4
  %47 = call i64 @os_snprintf_error(i64 %45, i32 %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %36
  store i32 -1, i32* %4, align 4
  br label %56

50:                                               ; preds = %36
  br label %51

51:                                               ; preds = %50, %29, %24
  %52 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %5, align 8
  %53 = getelementptr inbounds %struct.wpa_supplicant, %struct.wpa_supplicant* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 8
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %53, align 8
  store i32 0, i32* %4, align 4
  br label %56

56:                                               ; preds = %51, %49
  %57 = load i32, i32* %4, align 4
  ret i32 %57
}

declare dso_local i32 @os_snprintf(i8*, i64, i8*, i8*, ...) #1

declare dso_local i64 @os_snprintf_error(i64, i32) #1

declare dso_local i64 @os_strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
